2013-01-24
- bios/blkdev.c bios/blkdev.h bios/floppy.c: Removed useless byteswap member in
  BLKDEV structure. (VRI)
- bios/ide.c bios/ide.h bios/xhdi.c: Fixed recent regression on byteswapped IDE
  disks. (VRI)

2013-01-25
- Makefile bios/clock.c bios/serport.c cli/command.c include/config.h: Added
  the -Wundef option to avoid using undefined preprocessor identifiers. (VRI)
- vdi/vdi_col.c: Minor changes to initial ST/Falcon VDI palettes to agree
  with TOS. (RFB)

2013-01-27
- bios/processor.S include/asmdefs.h: Detect 68ec030 processor subtype. (RFB)
- bios/68030_pmmu.S bios/processor.S bios/tosvars.S include/asmdefs.h
  include/config.h Makefile: Add PMMU tree & enable data caching for
  68030 processors. (RFB)
- aes/geminit.c bios/bios.c bios/blkdev.c bios/ikbd.c bios/ikbd.h
  bios/initinfo.c: Use #defines instead of magic numbers for mode keys. (RFB)

2013-01-28
- bios/blkdev.c: Disable boot sector execution when Control is held
  down. (RFB)
- bios/68030_pmmu.S: Moved read-only data to SECTION_RODATA. (VRI)
- po/fr.po: Added missing translations. (VRI)
- desk/deskapp.c desk/desktop.def desk/desktop.rsc: Added "DISK" and
  "TRASH" from the desktop to the translatable strings. (RFB)
- bios/disk.c: Support DOS hard disk with no MBR. (RFB)

2013-01-29
- po/fi.po: Updated. Contributed by Eero Tamminen. (VRI)
- Makefile bios/amiga.c bios/amiga.h bios/amiga2.S bios/aros.c bios/aros.h
  bios/aros2.S: Split amiga.c to aros.c due to license issues. (VRI)

2013-01-30
- aes/gemsuper.c: Code cleanup: eliminate OB_ macros. (RFB)
- desk/deskapp.c: Handle internationalization of desktop DISK & TRASH
  names just like TOS. (RFB)
- bios/acsi.c bios/floppy.c bios/machine.c bios/machine.h include/config.h:
  Proper _FRB handing to fix floppy routines on Amiga with Alt Ram. (VRI)
- po/de.po: Updated German translations. (THH)
- bios/acsi.c: Code cleanup: removed GOTOs & simplified do_acsi_rw(). (RFB)

2013-01-31
- vdi/vdi_fill.c: Fixed v_contourfill() with negative index. (VRI)