@@ -4326,3 +4326,6 @@ Start... early ages
 
 2013-01-31
 - vdi/vdi_fill.c: Fixed v_contourfill() with negative index. (VRI)
+- Makefile bios/68040_pmmu.S bios/processor.S include/config.h: Added
+  experimental support for 68040 PMMU initialization. This does the same as
+  set_mmu.prg, which is now useless. Contributed by Miro Kropáček. (VRI)
